언어 더 추가

--- a/resources/langs/de-DE.json
+++ b/resources/langs/de-DE.json
@@ -3,5 +3,6 @@
   "setting": "Einstellung",
   "sound": "Klang",
   "loudness": "Lautstärke",
-  "vibration": "Vibration"
+  "vibration": "Vibration",
+  "canSwpie": "Sie können sich seitwärts bewegen! 🚀"
 }
