--- a/resources/langs/en-US.json
+++ b/resources/langs/en-US.json
@@ -3,5 +3,6 @@
   "setting": "setting",
   "sound": "sound",
   "loudness": "loudness",
-  "vibration": "vibration"
+  "vibration": "vibration",
+  "canSwpie": "You can move sideways! 🚀"
 }
