--- a/resources/langs/es-AR.json
+++ b/resources/langs/es-AR.json
@@ -3,6 +3,7 @@
     "setting": "configuración",
     "sound": "sonido",
     "loudness": "volumen",
-    "vibration": "vibración"
+    "vibration": "vibración",
+    "canSwpie": "¡Puedes moverte de lado! 🚀"
   }
   
