--- a/resources/langs/hi-IN.json
+++ b/resources/langs/hi-IN.json
@@ -3,5 +3,7 @@
   "setting": "सेटिंग",
   "sound": "आवाज़",
   "loudness": "प्रबलता",
-  "vibration": "कंपन"
+  "vibration": "कंपन",
+  "canSwpie": "आप बग़ल में स्थानांतरित कर सकते हैं! 🚀"
+  
 }
