--- a/resources/langs/ja-JP.json
+++ b/resources/langs/ja-JP.json
@@ -3,5 +3,6 @@
   "setting": "設定",
   "sound": "音",
   "loudness": "ラウドネス",
-  "vibration": "振動"
+  "vibration": "振動",
+  "canSwpie": "横に移動できます！ 🚀"
 }
