--- a/resources/langs/ko-KR.json
+++ b/resources/langs/ko-KR.json
@@ -3,5 +3,6 @@
   "setting": "환경설정",
   "sound": "소리",
   "loudness": "소리 크기",
-  "vibration": "진동"
+  "vibration": "진동",
+  "canSwpie": "옆으로 이동할 수 있어요! 🚀"
 }
