--- a/resources/langs/ru-RU.json
+++ b/resources/langs/ru-RU.json
@@ -3,5 +3,6 @@
   "setting": "параметр",
   "sound": "звук",
   "loudness": "громкость",
-  "vibration": "вибрация"
+  "vibration": "вибрация",
+  "canSwpie": "Вы можете двигаться вбок! 🚀"
 }
