--- a/resources/langs/pt-BR.json
+++ b/resources/langs/pt-BR.json
@@ -3,5 +3,6 @@
   "setting": "contexto",
   "sound": "som",
   "loudness": "volume",
-  "vibration": "vibração"
+  "vibration": "vibração",
+  "canSwpie": "Você pode se mover de lado! 🚀"
 }
